--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -32,15 +32,15 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">frontend</a>
+            <a class="navbar-brand" href="#/">Rezerwacje</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a ng-href="#/reservations">Widok rezerwacji</a></li>
+              <li><a ng-href="#/rooms">Pokoje</a></li>
+              <li><a ng-href="#/locators">Mieszkańcy</a></li>
             </ul>
           </div>
         </div>
@@ -53,7 +53,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p>2015 - Dawid Wiśniewski (kliknij, aby się skontaktować z autorem)</p>
       </div>
     </div>
 
