--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -88,6 +88,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/locators.js"></script>
+        <script src="scripts/controllers/reservations.js"></script>
+        <script src="scripts/controllers/rooms.js"></script>
         <!-- endbuild -->
 </body>
 </html>
