--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -91,6 +91,7 @@
         <script src="scripts/controllers/locators.js"></script>
         <script src="scripts/controllers/reservations.js"></script>
         <script src="scripts/controllers/rooms.js"></script>
+        <script src="scripts/services/services.js"></script>
         <!-- endbuild -->
 </body>
 </html>
