Added rooms adding/removing in reservations/SimpleEdition. Need to validate

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -41,7 +41,7 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a ng-href="#/reservations">Widok rezerwacji</a></li>
-              <li><a ng-href="#/rooms">Pokoje</a></li>
+              <li><a ng-href="#/room-find">Pokoje</a></li>
               <li><a ng-href="#/locators">Mieszkańcy</a></li>
             </ul>
           </div>
